<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">

    <string name="app_name" translatable="false">Vocable</string>

    <!-- Presets -->
    <string name="select_something">Select something below to speak.</string>
    <string name="phrases_page_number">Page %1$d of %2$d</string>
    <!-- Shared pagination (VocablePagination) -->
    <string name="previous_page">Previous page</string>
    <string name="next_page">Next page</string>
    <string name="my_sayings_empty"><b>Your sayings will appear\nhere.</b>\n\nNavigate to the keyboard, type something\n then select the \"☆\" to save it here.</string>
    <string name="my_sayings_empty_handset_port"><b>Your sayings will appear\nhere.</b>\n\nNavigate to the keyboard, type something then select the \"☆\" to save it here.</string>
    <string name="my_sayings_empty_handset_land"><b>Your sayings will appear here.</b>\n\nNavigate to the keyboard, type something\n then select the \"☆\" to save it here.</string>
    <string name="my_sayings_empty_settings"><b>You don’t have any sayings saved yet. Select the “+” in the top right to add something.</b></string>
    <string name="custom_category_empty"><b>You don\'t have any phrases saved yet.</b></string>

    <!-- Settings Page -->
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_developers">Contact Developers</string>
    <string name="version" translatable="false">V %s</string>
    <string name="settings_head_tracking">Head Tracking</string>
    <string name="settings_dialog_title">Leaving the app</string>
    <string name="settings_dialog_message">You\'re about to be taken outside the app. You may lose head tracking control.</string>
    <string name="settings_dialog_continue">Continue</string>
    <string name="settings_dialog_cancel">Cancel</string>
    <string name="settings_reset_dialog_message">Are you sure you want to reset Vocable to default settings? This action cannot be undone.</string>
    <string name="settings_reset_dialog_confirm">Reset</string>

    <!-- Settings Options -->
    <string name="settings_edit_saying">My Sayings</string>
    <string name="settings_edit_categories">Categories and Phrases</string>
    <string name="settings_selection_mode">Selection Mode</string>
    <string name="settings_reset_app">Reset Vocable</string>
    <string name="settings_options_voice">Voice</string>

    <!-- Reset Category (EditCategoryMenuScreen, non-custom categories only) -->
    <string name="reset_category">Reset Category</string>
    <string name="reset_phrases_label">Phrases</string>
...

    <!-- Edit Categories -->
    <string name="edit_categories_title">Categories and Phrases</string>
    <string name="edit_categories_button_number" translatable="false">%1d. %2s</string>

    <!-- Edit Category Options -->
    <string name="edit_category_show_category_text">Show Category</string>
    <string name="edit_category_remove_category_text">Remove Category</string>
    <string name="removed_cant_be_restored">Removed categories can not be restored.</string>

    <!-- Presets -->
    <string name="preset_general" formatted="false">General</string>
    <string name="preset_basic_needs" formatted="false">Basic Needs</string>
    <string name="preset_personal_care" formatted="false">Personal Care</string>
    <string name="preset_conversation" formatted="false">Conversation</string>
    <string name="preset_environment" formatted="false">Environment</string>
    <string name="preset_user_keypad" formatted="false">123</string>
    <string name="preset_user_favorites" formatted="false">My Sayings</string>
...
    <string name="preset_need_wash_face" formatted="false">I need to wash my face</string>
    <string name="preset_want_brush_hair" formatted="false">I need to brush my hair</string>
    <string name="preset_fix_pillow" formatted="false">Please fix my pillow</string>
    <string name="preset_need_spit" formatted="false">I need to spit</string>
    <string name="preset_trouble_breathing" formatted="false">I am having trouble breathing</string>
    <string name="preset_need_jacket" formatted="false">I need a jacket</string>
    <string name="add_phrase">Add Phrase</string>
    <string name="add_phrase_plus">+ Add Phrase</string>
    <string name="add_category">Add Category</string>
    <string name="add_to_category">Add to Category</string>
    <string name="no_custom_categories">No custom categories</string>
    <string name="create_custom_categories">Create custom categories in the settings menu to add phrases to them here.</string>
    <string name="all_categories_hidden_text">All of your categories have been hidden. You can show them again from the category settings page.</string>
    <string name="no_recent_phrases_title">No recently used phrases</string>
    <string name="no_recent_phrases_message">Start using the app to see your most recently used phrases here.</string>
    <string name="categories_edit_title">Categories</string>

    <!-- Camera Permissions -->
    <string name="permissions_missing_dialog_title">Required Permissions Unavailable</string>
    <string name="permissions_missing_dialog_body">Camera permissions are required to use the Head Tracking feature. Please enable them in the app settings.</string>
    <string name="permissions_confirm">OK</string>
    <string name="permissions_rationale_title">Camera permissions are needed to enable Head Tracking</string>

    <string name="rename_category">Rename Category</string>
    <string name="show_category">Show Category</string>
    <string name="edit_phrases">Edit Phrases</string>
    <string name="remove_category">Remove Category</string>

    <!-- Compose Migration Strings -->
    <string name="preset_sayings_title">Preset Sayings</string>
    <string name="keyboard">Keyboard</string>
    <string name="keyboard_clear">Clear</string>
    <string name="keyboard_space">Space</string>
    <string name="keyboard_backspace">Backspace</string>
    <string name="keyboard_speak">Speak</string>
    <string name="close_settings">Close Settings</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>

</resources>
