...
                    onCheckedChange = null,
                    modifier = Modifier
                        .constrainAs(switchRef) {
                            end.linkTo(parent.end)
                            centerVerticallyTo(parent)
                        }
                        .testTag("selection_mode_head_tracking_switch"),
                    colors = SwitchDefaults.colors(
                        checkedThumbColor = SelectedColor,
                        checkedTrackColor = ColorPrimaryDark,
                        uncheckedThumbColor = Color.Gray,
                        uncheckedTrackColor = ColorPrimaryDark
                    )
...
